# catabus-mcp

./: .gitignore  DEPLOYMENT.md  LICENSE  Makefile  README.md  conftest.py  fastmcp.toml  pyproject.toml  test_all_tools_local.py  test_client.py  test_comprehensive.py  test_deployment_ready.py  test_direct.py  test_fastmcp.py  test_fastmcp_cloud_ready.py  test_fastmcp_http.py  test_fastmcp_local.py  test_internal.py  test_preflight_simulation.py  test_quick_startup.py  test_server_port.py  test_simple.py  test_stdio_mode.py  test_stdio_quick.py
.github/workflows/: ci.yml  release.yml
src/catabus_mcp/: __init__.py  server.py  server_v2.py
src/catabus_mcp/ingest/: realtime_poll.py  static_loader.py
src/catabus_mcp/tools/: list_routes.py  next_arrivals.py  search_stops.py  trip_alerts.py  vehicle_positions.py
src/tests/: test_fastmcp_server.py  test_mcp_integration.py  test_mcp_working.py  test_server.py  test_tools.py
