[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "catabus-mcp"
version = "0.1.0"
description = "MCP server for CATA bus system live and static schedule data"
authors = [
    { name = "CATA Bus MCP Contributors" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1.0",
    "aiohttp>=3.9.0",
    "gtfs-realtime-bindings>=1.0.0",
    "pydantic>=2.5.0",
    "python-dateutil>=2.8.0",
    "pytz>=2024.1",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[project.scripts]
catabus-mcp = "catabus_mcp.server:main"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]